<resources>
    <string name="app_name">Smart Home</string>
    <string name="device_id">ID: %s</string>
    <string name="raw_qr_data">JSON: %s</string>
    <string name="off">KAPALI</string>
    <string name="on">AÇIK</string>
    <string name="device_name">Device Name</string>
    <string name="device_image">Device Image</string>
    <string name="on_off_button">Aç/Kapa Düğmesi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_device_name_title">Ürünün Adını Güncelle</string>
    <string name="update">Güncelle</string>
    <string name="cancel">Vazgeç</string>

    <!-- Yeni Eklenen Stringler -->
    <string name="select_button_text">SEÇ</string>
    <string name="add_device_button_text">Cihaz Ekle</string>
    <string name="smart_home_title">Smart Home</string>
    <string name="room_temperature">Oda sıcaklığı: 18°</string>
    <string name="air_quality">Hava kalitesi: 25 (ideal)</string>

</resources>